@page RN9 Release notes for SCIP 9

@section RN930 SCIP 9.3.0
*************************

Features
--------

Performance improvements
------------------------

Examples and applications
-------------------------

Interface changes
-----------------

### New and changed callbacks

### New API functions
- SCIPdisplaySymmetryGenerators() and SCIPdialogExecDisplaySymmetry() to display generators of symmetry group

### Command line interface

### Interfaces to external software

### Changed parameters

### New parameters

### Data structures

Fixed bugs
----------

Miscellaneous
-------------

- updated description of paramater misc/usesymmetry

@section RN921 SCIP 9.2.1
*************************

Fixed bugs
----------

- apply same feasibility definition in PaPILO as SCIP to avoid numerical inconsistencies
- check variable cancellation in SCIPvarAddVlb() and SCIPvarAddVub() to avert wrong infeasibility
- SCIPfreeReoptSolve now also clears the partial solutions
- fixed bug in calculation of "fractionality score" for spatial branching candidates in cons_nonlinear
- fixed bug with installing symmetry dialog in sub-SCIPs
- add copy callbacks for default plugins presolver dualagg, presolver redvub, branchrule lookahead, branchrule cloud, heuristic dualval, heuristic repair, propagator nlobbt, separator gauge, and separator convexproj missing in SCIPsetCopyPlugins()
- respect maximal round setting of separation by running remaining delayed separators in last round

Unit tests
----------

Testing
-------

Build system
------------

### Cmake

- fix SCIP Optimization Suite build with -DSYM=(s)bliss and bliss being downloaded and build during configuration by cmake
- fix use of a bliss cmake installation (from https://github.com/scipopt/bliss) specified via BLISS_DIR if -DSYM=(s)bliss

### Makefile

Miscellaneous
-------------

- The output precision for writing CIP/POB files has been increased at several places for nonlinear constraints.

Known bugs
----------
