@@ -3900,6 +3900,7 @@ SCIP_RETCODE SCIPwriteMps(
    SCIP_CONS** consSOS1;
    SCIP_CONS** consSOS2;
    SCIP_CONS** consQuadratic;
+   SCIP_EXPR** exprQuadratic;  /* expressions to quadratic constraints */
    int nConsIndicator;
    int nConsSOS1;
    int nConsSOS2;
@@ -3966,6 +3967,7 @@ SCIP_RETCODE SCIPwriteMps(
    SCIP_CALL( SCIPallocBufferArray(scip, &consSOS1, nconss) );
    SCIP_CALL( SCIPallocBufferArray(scip, &consSOS2, nconss) );
    SCIP_CALL( SCIPallocBufferArray(scip, &consQuadratic, nconss) );
+   SCIP_CALL( SCIPallocBufferArray(scip, &exprQuadratic, nconss) );
    SCIP_CALL( SCIPallocBufferArray(scip, &consIndicator, nconss) );
 
    /* nfixedvars counts all variables with status SCIP_VARSTATUS_FIXED, SCIP_VARSTATUS_AGGREGATED, SCIP_VARSTATUS_MULTAGGR, but not SCIP_VARSTATUS_NEGATED */
@@ -4293,20 +4295,39 @@ SCIP_RETCODE SCIPwriteMps(
          int j;
 
          /* check if it is a quadratic constraint */
-         SCIP_CALL( SCIPcheckQuadraticNonlinear(scip, cons, &isquadratic) );
+         expr = SCIPgetExprNonlinear(cons);
+         SCIP_CALL( SCIPcheckExprQuadratic(scip, expr, &isquadratic) );
+         if( !isquadratic || !SCIPexprAreQuadraticExprsVariables(expr) )
+         {
+            SCIP_Bool changed;
+            SCIP_Bool infeasible;
+            SCIP_CALL( SCIPsimplifyExpr(scip, expr, &expr, &changed, &infeasible, NULL, NULL) );
+            /* the corresponding releaseExpr is in the writing of the QCMATRIX sections at the end */
+            if( changed )
+            {
+               SCIP_CALL( SCIPcheckExprQuadratic(scip, expr, &isquadratic) );
+               isquadratic &= SCIPexprAreQuadraticExprsVariables(expr);
+               assert(!infeasible || !isquadratic);
+            }
+         }
+
          if( !isquadratic )
          {
             /* unknown constraint type; mark this with SCIPinfinity(scip) */
             rhss[c] = SCIPinfinity(scip);
 
-            SCIPwarningMessage(scip, "constraint handler <%s> cannot print requested format\n", conshdlrname );
+            SCIPwarningMessage(scip, "nonlinear constraint <%s> not recognized as quadratic: cannot print as MPS\n", SCIPconsGetName(cons));
+            if( expr != SCIPgetExprNonlinear(cons) )
+            {
+               SCIP_CALL( SCIPreleaseExpr(scip, &expr) );
+            }
             continue;
          }
 
-         /* store constraint */
-         consQuadratic[nConsQuadratic++] = cons;
-
-         expr = SCIPgetExprNonlinear(cons);
+         /* store constraint and corresponding expression (may be the simplified one) */
+         consQuadratic[nConsQuadratic] = cons;
+         exprQuadratic[nConsQuadratic] = expr;
+         ++nConsQuadratic;
 
          /* collect linear coefficients of quadratic part */
          SCIPexprGetQuadraticData(expr, &constant, &nlinexprs, &linexprs, &lincoefs, &nquadexprs, NULL, NULL,
@@ -4752,7 +4773,7 @@ SCIP_RETCODE SCIPwriteMps(
          SCIP_EXPR* expr;
 
          cons = consQuadratic[c];
-         expr = SCIPgetExprNonlinear(cons);
+         expr = exprQuadratic[c];
 
          SCIPexprGetQuadraticData(expr, NULL, NULL, NULL, NULL, &nconsvars, &nbilin, NULL, NULL);
 
@@ -4827,6 +4848,11 @@ SCIP_RETCODE SCIPwriteMps(
             printStart(scip, file, "", varname2, (int) maxnamelen);
             printRecord(scip, file, varname, valuestr, maxnamelen);
             SCIPinfoMessage(scip, file, "\n");
+         }
+
+         if( expr != SCIPgetExprNonlinear(cons) )
+         {
+            SCIP_CALL( SCIPreleaseExpr(scip, &expr) );
          }
       }
 
@@ -4906,6 +4932,7 @@ SCIP_RETCODE SCIPwriteMps(
 
    /* free buffer arrays for SOS1, SOS2, and quadratic */
    SCIPfreeBufferArray(scip, &consIndicator);
+   SCIPfreeBufferArray(scip, &exprQuadratic);
    SCIPfreeBufferArray(scip, &consQuadratic);
    SCIPfreeBufferArray(scip, &consSOS2);
    SCIPfreeBufferArray(scip, &consSOS1);
