@@ -6,6 +6,8 @@
 Features
 --------
 
+- simplify expressions of nonlinear constraints in MPS writing to increase chance that they are recognized as quadratic
+
 Performance improvements
 ------------------------
 
